0.02
 - Remove executable bit from bucharest-map.xml file.

0.01 2014-12-10T01:21:14+01:00
 - First version