@@ -5,6 +5,7 @@ SYNOPSIS
      use Map::Tube::Bucharest;
      my $obj = Map::Tube::Bucharest->new;
      my $routes_ar = $obj->get_all_routes($from, $to);
+     my $lines_ar = $obj->get_lines;
      my $station = $obj->get_node_by_id($station_id);
      my $station = $obj->get_node_by_name($station_name);
      my $route = $obj->get_shortest_route($from, $to);
@@ -25,6 +26,10 @@ METHODS
     "get_all_routes($from, $to)" [EXPERIMENTAL]
              Get all routes from station to station.
              Returns reference to array with Map::Tube::Route objects.
+
+    "get_lines()"
+             Get lines in metro map.
+             Returns reference to array with Map::Tube::Line objects.
 
     "get_node_by_id($station_id)"
              Get station node by id.
