@@ -1,4 +1,5 @@
 0.02
+ - Add get_lines() method to doc.
  - Remove executable bit from bucharest-map.xml file.
 
 0.01 2014-12-10T01:21:14+01:00
